<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="boyaa_kefu_press_to_speak">按住说话</string>
    <string name="boyaa_kefu_imageview_content_description">图片</string>
    <string name="boyaa_kefu_pick_picture_label">上传图片</string>
    <string name="boyaa_kefu_take_picture_label">拍摄</string>
    <string name="boyaa_kefu_show_faq_label">常见问题</string>
    <string name="boyaa_kefu_chat_normal_title">博雅客服中心</string>
    <string name="boyaa_kefu_chat_vip_title">博雅在线客服</string>
    <string name="boyaa_kefu_chat_normal">普通用户咨询</string>
    <string name="boyaa_kefu_chat_vip">vip用户咨询</string>
    <string name="boyaa_kefu_connectedto">Connected to </string>
    <string name="boyaa_kefu_Disconnect">Disconnect</string>
    <string name="boyaa_kefu_disconnected">Disconnected from</string>
    <string name="boyaa_kefu_no_status">Unknown connection status to</string>
    <string name="boyaa_kefu_connecting">Connecting to</string>
    <string name="boyaa_kefu_disconnecting">Disconnecting from</string>
    <string name="boyaa_kefu_connectionError">An error occurred connecting to</string>
    <string name="boyaa_kefu_connection_lost">%1$s has lost connection to %2$s</string>
    <string name="boyaa_kefu_toast_disconnected">Disconnected</string>
    <string name="boyaa_kefu_toast_pub_failed">Failed to publish message: %1$s to topic: %2$s</string>
    <string name="boyaa_kefu_toast_sub_failed">Failed to subscribe to %1$s</string>
    <string name="boyaa_kefu_toast_pub_success">Published message: %1$s to topic: %2$s</string>
    <string name="boyaa_kefu_toast_sub_success">Subscribed to %1$s</string>
    <string name="boyaa_kefu_not_download">Did not download:</string>
    <string name="boyaa_kefu_text_ack_msg">Read</string>
    <string name="boyaa_kefu_resend">Resend</string>
    <string name="boyaa_kefu_confirm_resend">Confirm to resend？</string>
    <string name="boyaa_kefu_text_delivered_msg">Delivered</string>
    <string name="boyaa_kefu_menu_bar_item1">盗号申述</string>
    <string name="boyaa_kefu_menu_bar_item2">玩家举报</string>
    <string name="boyaa_kefu_menu_bar_item3">留言回复</string>
    <string name="boyaa_kefu_title_back">返回</string>
    <string name="boyaa_kefu_input_hint">请输入您的问题</string>
    <string name="boyaa_kefu_send_msg">发送</string>
    <string name="boyaa_kefu_swipe_refresh_down_tip">下拉查看历史消息</string>
    <string name="boyaa_kefu_ptr_pull_to_refresh">下拉查看历史消息</string>
    <string name="boyaa_kefu_ptr_release_to_refresh">释放刷新</string>
    <string name="boyaa_kefu_ptr_refreshing">正在刷新…</string>
    <string name="boyaa_kefu_ptr_last_updated">Updated: %1$s</string>
    <string name="boyaa_kefu_back_dialog_tips">当您退出此页面时\n则表示确认结束此次对话</string>
    <string name="boyaa_kefu_back_dialog_cancel">取消</string>
    <string name="boyaa_kefu_back_dialog_ok">确认</string>
    <string name="boyaa_kefu_rate_title">满意度评价</string>
    <string name="boyaa_kefu_rate_content_speed">客服响应速度</string>
    <string name="boyaa_kefu_rate_content_attitude">客服服务态度</string>
    <string name="boyaa_kefu_rate_content_feel">产品体验</string>
    <string name="boyaa_kefu_rate_content_tips">您的评价对于改善我们的服务有重大意义</string>
    <string name="boyaa_kefu_hint_tips_str">客服%1$s很高兴为您服务</string>
    <string name="boyaa_kefu_hint_tips_repeat_str">您已恢复与客服%1$s的会话</string>
    <string name="boyaa_kefu_waiting_in_line">{\"head\":\"很抱歉，当前客服繁忙请您耐心等待一下。\n您前面还有%1$s位用户等待咨询，您可以选择继续等待  或\",\"links\":[{\"type\":21,\"value\":1,\"text\":\"留言回复\"}]}</string>
    <string name="boyaa_kefu_waiting_access">正在排队中，前面还有0人，请稍候</string>
    <string name="boyaa_kefu_hint_end_tips_str">与客服%1$s 的会话已经结束</string>
    <string name="boyaa_kefu_hint_timeout">温馨提示:由于您已经长时间未响应，为了不影响其他玩家的正常接入，系统将会在2分钟后自动结束服务，若您在游戏中遇到问题，还请您描述。</string>
    <string name="boyaa_kefu_hint_logout_tips_str">你已经断开与客服的连接，是否"重连"。</string>
    <string name="boyaa_kefu_hint_end_session">温馨提示:非常抱歉，由于您已经长时间未响应。为了不影响其他玩家的正常接入，系统已结束本次服务，若您还有其他问题，可再次联系我们，感谢您对游戏的支持！</string>
    <string name="boyaa_kefu_has_no_more_messages">没有更多消息了</string>
    <string name="boyaa_kefu_is_loading">正在加载，请稍后</string>
    <string name="boyaa_kefu_extra_message">附言:</string>
    <string name="boyaa_kefu_rate_cancel">不评价</string>
    <string name="boyaa_kefu_cancel">取消</string>
    <string name="boyaa_kefu_inform_number">编号:</string>
    <string name="boyaa_kefu_inform_id">举报ID:</string>
    <string name="boyaa_kefu_inform_type">举报类型:</string>
    <string name="boyaa_kefu_inform_content">举报内容:</string>
    <string name="boyaa_kefu_comment_content">内容:</string>
    <string name="boyaa_kefu_inform_additon">再次申诉</string>
    <string name="boyaa_kefu_comment_additon">回复</string>
    <string name="boyaa_kefu_inform_has_commit">您的举报已提交成功，请耐心等待</string>
    <string name="boyaa_kefu_inform_response">客服回复:</string>
    <string name="boyaa_kefu_inform_i_want_inform">我要举报</string>
    <string name="boyaa_kefu_pencent_0">0%</string>
    <string name="boyaa_kefu_voice_lenght">3&amp;apos;&amp;apos;</string>
    <string name="boyaa_kefu_deal">已解决</string>
    <string name="boyaa_kefu_undeal">未解决</string>
    <string name="boyaa_kefu_submiting">"正在提交.."</string>
    <string name="boyaa_kefu_leave_message">留言</string>
    <string name="boyaa_kefu_reconnect_message">重连</string>
    <string name="boyaa_kefu_network_exception_tip">网络连接断开，请检查您的网络设置，或请等候...</string>
    <string name="boyaa_kefy_normal_user">普通用户</string>
    <string name="boyaa_kefy_casual_user">游客</string>
    <string name="boyaa_kefy_self_service_not_available">人工服务中，无法自助选择</string>
    <string name="boyaa_kefy_mqtt_login_failed">当前网络较差，请检查您的网络设置，或联系热线客服：400-663-1888</string>
    <string name="boyaa_kefy_mqtt_login_failed_keyword">400-663-1888</string>
    <string name="boyaa_kefy_mqtt_kefu_shift_robot">当前客服繁忙，转接到机器人为您服务</string>
    <string name="boyaa_kefy_mqtt_menu_replay_default">客服人员正在处理中，将在三个工作日内给予答复，如果情况紧急，您可以联系语音客服400-663-1888反馈此问题，或联系在线客服反馈此问题</string>
    <string name="boyaa_kefy_mqtt_menu_replay_default_key">客服人员正在处理中</string>
    <string name="boyaa_kefy_history_split_line_text">以上是历史消息</string>
    <!-- 表情 -->
    <string name="boyaa_kefu_emotion_1">[e一脸懵逼]</string>
    <string name="boyaa_kefu_emotion_2">[e不开心]</string>
    <string name="boyaa_kefu_emotion_3">[e亲亲]</string>
    <string name="boyaa_kefu_emotion_4">[e亲亲2]</string>
    <string name="boyaa_kefu_emotion_5">[e亲亲3]</string>
    <string name="boyaa_kefu_emotion_6">[e亲亲4]</string>
    <string name="boyaa_kefu_emotion_7">[e受伤]</string>
    <string name="boyaa_kefu_emotion_8">[e可爱]</string>
    <string name="boyaa_kefu_emotion_9">[e可爱2]</string>
    <string name="boyaa_kefu_emotion_10">[e吐舌头]</string>
    <string name="boyaa_kefu_emotion_11">[e吐舌头2]</string>
    <string name="boyaa_kefu_emotion_12">[e吐舌头3]</string>
    <string name="boyaa_kefu_emotion_13">[e咧嘴]</string>
    <string name="boyaa_kefu_emotion_14">[e哦]</string>
    <string name="boyaa_kefu_emotion_15">[e哦2]</string>
    <string name="boyaa_kefu_emotion_16">[e哭]</string>
    <string name="boyaa_kefu_emotion_17">[e哭笑不得]</string>
    <string name="boyaa_kefu_emotion_18">[e哼]</string>
    <string name="boyaa_kefu_emotion_19">[e嘻嘻]</string>
    <string name="boyaa_kefu_emotion_20">[e嘿嘿]</string>
    <string name="boyaa_kefu_emotion_21">[e困]</string>
    <string name="boyaa_kefu_emotion_22">[e困2]</string>
    <string name="boyaa_kefu_emotion_23">[e墨镜]</string>
    <string name="boyaa_kefu_emotion_24">[e大笑]</string>
    <string name="boyaa_kefu_emotion_25">[e天使]</string>
    <string name="boyaa_kefu_emotion_26">[e害怕]</string>
    <string name="boyaa_kefu_emotion_27">[e小恶魔]</string>
    <string name="boyaa_kefu_emotion_28">[e开心]</string>
    <string name="boyaa_kefu_emotion_29">[e开心2]</string>
    <string name="boyaa_kefu_emotion_30">[e开心3]</string>
    <string name="boyaa_kefu_emotion_31">[e怒]</string>
    <string name="boyaa_kefu_emotion_32">[e怒2]</string>
    <string name="boyaa_kefu_emotion_33">[e怒3]</string>
    <string name="boyaa_kefu_emotion_34">[e感冒]</string>
    <string name="boyaa_kefu_emotion_35">[e扮鬼]</string>
    <string name="boyaa_kefu_emotion_36">[e拍手]</string>
    <string name="boyaa_kefu_emotion_37">[e无奈]</string>
    <string name="boyaa_kefu_emotion_38">[e无奈2]</string>
    <string name="boyaa_kefu_emotion_39">[e无奈3]</string>
    <string name="boyaa_kefu_emotion_40">[e无奈地笑]</string>
    <string name="boyaa_kefu_emotion_41">[e无表情]</string>
    <string name="boyaa_kefu_emotion_42">[e无语]</string>
    <string name="boyaa_kefu_emotion_43">[e无语2]</string>
    <string name="boyaa_kefu_emotion_44">[e无语3]</string>
    <string name="boyaa_kefu_emotion_45">[e无语4]</string>
    <string name="boyaa_kefu_emotion_46">[e无语5]</string>
    <string name="boyaa_kefu_emotion_47">[e无语6]</string>
    <string name="boyaa_kefu_emotion_48">[e晕]</string>
    <string name="boyaa_kefu_emotion_49">[e晕2]</string>
    <string name="boyaa_kefu_emotion_50">[e汗]</string>
    <string name="boyaa_kefu_emotion_51">[e汗2]</string>
    <string name="boyaa_kefu_emotion_52">[e温馨]</string>
    <string name="boyaa_kefu_emotion_53">[e爱心脸]</string>
    <string name="boyaa_kefu_emotion_54">[e白脸]</string>
    <string name="boyaa_kefu_emotion_55">[e眨眼]</string>
    <string name="boyaa_kefu_emotion_56">[e翻白眼]</string>
    <string name="boyaa_kefu_emotion_57">[e肚子疼]</string>
    <string name="boyaa_kefu_emotion_58">[e胜利]</string>
    <string name="boyaa_kefu_emotion_59">[e见钱眼开]</string>
    <string name="boyaa_kefu_emotion_60">[e见鬼了]</string>
    <string name="boyaa_kefu_emotion_61">[e鄙视脸]</string>
    <string name="boyaa_kefu_emotion_62">[e难过2]</string>
    <string name="boyaa_kefu_emotion_63">[e馋]</string>
    <string name="boyaa_kefu_emotion_64">[e黑脸]</string>
    <string name="boyaa_kefu_emotion_65">[e鼻涕]</string>
    <string name="boyaa_kefu_emotion_66">[e拜托]</string>
    <string name="boyaa_kefu_emotion_67">[e爱心]</string>
    <string name="boyaa_kefu_emotion_68">[e赞]</string>
    <string name="boyaa_kefu_emotion_69">[e亲亲猫]</string>
    <string name="boyaa_kefu_emotion_70">[e侧脸猫]</string>
    <string name="boyaa_kefu_emotion_71">[e哭笑不得猫]</string>
    <string name="boyaa_kefu_emotion_72">[e嘿嘿猫]</string>
    <string name="boyaa_kefu_emotion_73">[e大笑猫]</string>
    <string name="boyaa_kefu_emotion_74">[e开心猫]</string>
    <string name="boyaa_kefu_emotion_75">[e惊讶猫]</string>
    <string name="boyaa_kefu_emotion_76">[e色眯眯猫]</string>
    <string name="boyaa_kefu_emotion_77">[e鼻涕猫]</string>
    <string name="boyaa_kefu_emotion_78">[e兔子]</string>
    <string name="boyaa_kefu_emotion_79">[e小鸡]</string>
    <string name="boyaa_kefu_emotion_80">[e熊]</string>
    <string name="boyaa_kefu_emotion_81">[e熊猫]</string>
    <string name="boyaa_kefu_emotion_82">[e狗]</string>
    <string name="boyaa_kefu_emotion_83">[e狗2]</string>
    <string name="boyaa_kefu_emotion_84">[e猪]</string>
    <string name="boyaa_kefu_emotion_85">[e猫]</string>
    <string name="boyaa_kefu_emotion_86">[e猴子]</string>
    <string name="boyaa_kefu_emotion_87">[e老虎]</string>
    <string name="boyaa_kefu_emotion_88">[e老鼠]</string>
    <string name="boyaa_kefu_emotion_89">[e青蛙]</string>
    <string name="boyaa_kefu_emotion_90">[e马]</string>
    <string name="boyaa_kefu_copy">复制</string>
    <string name="boyaa_kefu_resend_msg">是否重新发送消息？</string>
    <string name="boyaa_kefu_default_user_info">暂时无法获取信息</string>
    <string name="boyaa_kefu_hint_tips_after_offmsg">以上是离线消息</string>
</resources>
