<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="95dp" >

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/boyaa_kefu_back_dialog_tips"
            android:textColor="#000000"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/boyaa_kefu_back_cancel"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/appkefu_inputbar_recordvoicebtn"
            android:text="@string/boyaa_kefu_back_dialog_cancel" />

        <Button
            android:id="@+id/boyaa_kefu_back_confirm"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/boyaa_kefu_submit_click"
            android:text="@string/boyaa_kefu_back_dialog_ok" />
    </LinearLayout>

</LinearLayout>