<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/boyaa_kefu_id_inform_citems_replycontent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:id="@+id/boyaa_kefu_id_inform_citems_informcontent_num"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/boyaa_kefu_id_inform_citems_informcontent_num_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
                android:textSize="16sp"
                android:text="@string/boyaa_kefu_inform_number"/>

            <TextView
                android:id="@+id/boyaa_kefu_id_inform_citems_informcontent_num_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/boyaa_kefu_id_inform_citems_informcontent_id_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:text="@string/boyaa_kefu_inform_id"/>

            <TextView
                android:id="@+id/boyaa_kefu_id_inform_citems_informcontent_id_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/boyaa_kefu_id_inform_citems_informcontent_type_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:text="@string/boyaa_kefu_inform_type"/>

            <TextView
                android:id="@+id/boyaa_kefu_id_inform_citems_informcontent_type_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/boyaa_kefu_id_inform_citems_informcontent_content"
            android:layout_below="@id/boyaa_kefu_id_inform_citems_informcontent_num"
            android:layout_height="100dp"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/boyaa_kefu_id_inform_citems_informcontent_tip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
                android:gravity="center_vertical"
                android:text="@string/boyaa_kefu_inform_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/boyaa_kefu_id_inform_citems_informcontent_tip"
                android:id="@+id/boyaa_kefu_id_inform_citems_informcontent"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:hint="@string/boyaa_kefu_inform_has_commit"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/boyaa_kefu_id_inform_citems_serviceReply"
        android:layout_below="@id/boyaa_kefu_id_inform_citems_replycontent"
        android:layout_height="100dp"
        android:background="#CECECE">

        <TextView
            android:id="@+id/boyaa_kefu_id_inform_citems_servicereply_tip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
            android:gravity="center_vertical"
            android:text="@string/boyaa_kefu_inform_response"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/boyaa_kefu_id_inform_citems_servicereply_tip"
            android:id="@+id/boyaa_kefu_id_inform_citems_servicereply_value"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:hint="@string/boyaa_kefu_inform_has_commit"/>

    </RelativeLayout>

</RelativeLayout>